# embedded-cli

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  PreLoad.cmake  README.md  build-example.sh  build.sh  clang-tidy.sh  cli  cli.c  cli_defs.h  docker-compose.yml  main.c  packages.txt  project.yml  skip.list  static-analysis.sh  unit-tests.sh
.devcontainer/: .bashrc  devcontainer.json
.github/workflows/: tests.yml
examples/: Makefile  cli  main.c
src/: .clang-tidy  cli.c  cli.h  cli_defs.h
test/: test_cli.c
test/support/: fake_printf.h
tests/: CMakeLists.txt  test_cli.c
tests/support/: CMakeLists.txt  fake_printf.c  fake_printf.h
tests/support/check_assert/: CMakeLists.txt  check_assert.h
tests/support/fake_printf/: fake_printf.c  fake_printf.h
tests/test_cli/: CMakeLists.txt  test_cli.c
